--- a/Srikanth_Vooradi/ReachOutMe/templates/ReachOutMe/contact_detail.html
+++ b/Srikanth_Vooradi/ReachOutMe/templates/ReachOutMe/contact_detail.html
@@ -1,18 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Contact Details</title>
-</head>
-<body>
-    <h2>Contact Details: {{ contact.name }}</h2>
-    <p>Phone: {{ contact.phone }}</p>
-    <p>Email: {{ contact.email }}</p>
-    <a href="{% url 'ReachOutMe:contact_update' contact.id %}">Edit</a>
-    <a href="{% url 'ReachOutMe:contact_delete' contact.id %}">Delete</a>
+{% extends 'base.html' %}
 
-    <footer>
-        <p>&copy; 2023 by Srikanth Vooradi</p>
-    </footer>
-</body>
-</html>
+{% block content %}
+    <h1>Contact Details: {{ contact.name }}</h1>
+    <p>Email: {{ contact.email }}</p>
+    <p>Phone: {{ contact.phone }}</p>
+    <a href="{% url 'ReachOutMe:contact_update' contact.pk %}">Edit</a>
+    <a href="{% url 'ReachOutMe:contact_delete' contact.pk %}">Delete</a>
+{% endblock %}
