--- a/Srikanth_Vooradi/ReachOutMe/templates/ReachOutMe/contact_create.html
+++ b/Srikanth_Vooradi/ReachOutMe/templates/ReachOutMe/contact_create.html
@@ -1,10 +1,50 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>{{ form_title }}</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Submit">
-    </form>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-lg-6 offset-lg-3">
+            <div class="card">
+                <div class="card-body">
+                    <h2 class="card-title text-center">{{ form_title }}</h2>
+                    <form method="post" novalidate>
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <label for="id_name">Name:</label>
+                            {{ form.name }}
+                            {% if form.name.errors %}
+                                <div class="error">{{ form.name.errors.as_text }}</div>
+                            {% endif %}
+                        </div>
+                        <div class="form-group">
+                            <label for="id_email">Email:</label>
+                            {{ form.email }}
+                            {% if form.email.errors %}
+                                <div class="error">{{ form.email.errors.as_text }}</div>
+                            {% endif %}
+                        </div>
+                        <div class="form-group">
+                            <label for="id_phone">Phone:</label>
+                            {{ form.phone }}
+                            {% if form.phone.errors %}
+                                <div class="error">{{ form.phone.errors.as_text }}</div>
+                            {% endif %}
+                        </div>
+                        <div class="form-group">
+                            <label for="id_notes">Notes:</label>
+                            {{ form.notes }}
+                            {% if form.notes.errors %}
+                                <div class="error">{{ form.notes.errors.as_text }}</div>
+                            {% endif %}
+                        </div>
+                        <div class="form-group text-center">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <a href="{% url 'ReachOutMe:contact_list' %}" class="btn btn-secondary">Back</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
