--- a/Srikanth_Vooradi/ReachOutMe/templates/ReachOutMe/contact_delete.html
+++ b/Srikanth_Vooradi/ReachOutMe/templates/ReachOutMe/contact_delete.html
@@ -1,10 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Delete Contact: {{ contact.name }}</h1>
-    <form method="post">
-        {% csrf_token %}
-        <input type="submit" value="Confirm Delete">
-        <a href="{% url 'ReachOutMe:contact_list' %}">Cancel</a>
-    </form>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-lg-6 offset-lg-3">
+            <div class="card">
+                <div class="card-body">
+                    <h2 class="card-title text-center">Delete Contact: {{ contact.name }}</h2>
+                    <form action="{% url 'ReachOutMe:contact_delete' contact.pk %}" method="post">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                        <a href="{% url 'ReachOutMe:contact_list' %}" class="btn btn-secondary">Back</a>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
