--- a/Srikanth_Vooradi/ReachOutMe/templates/ReachOutMe/contact_detail.html
+++ b/Srikanth_Vooradi/ReachOutMe/templates/ReachOutMe/contact_detail.html
@@ -4,6 +4,6 @@
     <h1>Contact Details: {{ contact.name }}</h1>
     <p>Email: {{ contact.email }}</p>
     <p>Phone: {{ contact.phone }}</p>
-    <a href="{% url 'ReachOutMe:contact_update' contact.pk %}">Edit</a>
-    <a href="{% url 'ReachOutMe:contact_delete' contact.pk %}">Delete</a>
+    <a href="{% url 'ReachOutMe:contact_update' contact.pk %}" class="btn btn-primary">Edit</a>
+    <a href="{% url 'ReachOutMe:contact_list' %}" class="btn btn-secondary">Back</a>
 {% endblock %}
