--- a/Srikanth_Vooradi/ReachOutMe/templates/ReachOutMe/contact_delete.html
+++ b/Srikanth_Vooradi/ReachOutMe/templates/ReachOutMe/contact_delete.html
@@ -1,6 +1,7 @@
-{% extends 'base.html' %}
-
 {% block content %}
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+
 <div class="container mt-5">
     <div class="row">
         <div class="col-lg-6 offset-lg-3">
@@ -19,4 +20,10 @@
         </div>
     </div>
 </div>
+
+<footer class="footer mt-5 custom-footer">
+    <div class="container text-center">
+        &copy; 2023 Srikanth Vooradi. All rights reserved.
+    </div>
+</footer>
 {% endblock %}
