--- a/Srikanth_Vooradi/ReachOutMe/templates/ReachOutMe/contact_detail.html
+++ b/Srikanth_Vooradi/ReachOutMe/templates/ReachOutMe/contact_detail.html
@@ -1,6 +1,9 @@
-{% extends 'base.html' %}
-
 {% block content %}
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 <div class="container mt-5">
     <div class="row">
         <div class="col-lg-6 offset-lg-3">
@@ -21,4 +24,10 @@
         </div>
     </div>
 </div>
+
+<footer class="footer mt-5 custom-footer">
+    <div class="container text-center">
+        &copy; 2023 Srikanth Vooradi. All rights reserved.
+    </div>
+</footer>
 {% endblock %}
