--- a/Srikanth_Vooradi/ReachOutMe/templates/ReachOutMe/contact_list.html
+++ b/Srikanth_Vooradi/ReachOutMe/templates/ReachOutMe/contact_list.html
@@ -1,7 +1,10 @@
-{% extends 'base.html' %}
-
 {% block title %}Contact Management{% endblock %}
 {% block content %}
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 <style>
     /* Custom CSS styles */
     .btn-create-contact {
@@ -32,6 +35,12 @@
     .btn-delete {
         background-color: #dc3545; /* Red color for Delete button */
         color: white; /* White text color */
+    }
+
+    /* Custom footer styles */
+    .custom-footer {
+        background-color: #f5f5f5; /* Background color for the footer */
+        padding: 10px 0; /* Padding for the footer */
     }
 </style>
 
@@ -69,4 +78,10 @@
         <p>No contacts available.</p>
     {% endif %}
 </div>
+
+<footer class="footer mt-5 custom-footer">
+    <div class="container text-center">
+        &copy; 2023 Srikanth Vooradi. All rights reserved.
+    </div>
+</footer>
 {% endblock %}
