--- a/Srikanth_Vooradi/ReachOutMe/templates/ReachOutMe/contact_form.html
+++ b/Srikanth_Vooradi/ReachOutMe/templates/ReachOutMe/contact_form.html
@@ -37,7 +37,7 @@
         <div class="col-lg-6">
             <div class="card custom-card">
                 <div class="card-body">
-                    <h2 class="card-title text-center mb-4">Edit Contact: {{ form_title }}</h2>
+                    <h2 class="card-title text-center mb-4">Edit Contact{{ form_title }}</h2>
                     <form method="post">
                         {% csrf_token %}
                         <div class="form-group">
